BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/MC_Cycle_vod__c.object
<CustomObject>
    <description>Defines an overall cycle.</description>
    <fields>
        <fullName>Activate_Edited_Goals_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, when the MCCP integration runs it will copy the edited goal value to the active goal field</description>
        <label>Activate Edited Goals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculate_Pull_Through_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true and pull-through fields exist on the MC_Target_vod object, when the MCCP integration runs it will populate the pull-through fields. It is not advised to set this often, only when pull-through values are needed to be populated.</description>
        <inlineHelpText>If true and pull-through fields exist on the MC_Target_vod object, when the MCCP integration runs it will populate the pull-through fields. It is not advised to set this often, only when pull-through values are needed to be populated.</inlineHelpText>
        <label>Calculate Pull Through</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_BMS_SHARED__c</fullName>
        <description>VPRO Latam June-2015: created to anticipate sharing rules which will support country-specific visibility rules.</description>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Brief description of the Cycle.</description>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>End date of the cycle.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External ID for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Over_Reached_Threshold_vod__c</fullName>
        <description>Value used in determining Attainment Status. The attainment is compared to the Percent_Cycle_Completed_vod field, and if the attainment is more than (Percent_Cycle_Completed_vod + this value) then the Attainment Status is mapped to the OVER_REACHED Veeva Message.</description>
        <label>Over Reached Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start date of the cycle.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Indicates the Status of the Cycle.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In_Progress_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Under_Reached_Threshold_vod__c</fullName>
        <description>Value used in determining Attainment Status. The attainment is compared to the Percent_Cycle_Completed_vod field, and if the attainment is less than (Percent_Cycle_Completed_vod - this value) then the Attainment Status is mapped to the UNDER_REACHED Veeva Message.</description>
        <label>Under Reached Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MC Cycle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date_vod__c</columns>
        <columns>End_Date_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Cycles</pluralLabel>
    <recordTypes>
        <fullName>Cycle_vod</fullName>
        <active>true</active>
        <description>Cycle Definition</description>
        <label>Cycle_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>StartDate_GreaterThan_EndDate_vod</fullName>
        <active>true</active>
        <description>Start_Date_vod cannot be greater than or equal to the End_Date_vod.</description>
        <errorConditionFormula>Start_Date_vod__c &gt;= End_Date_vod__c</errorConditionFormula>
        <errorDisplayField>End_Date_vod__c</errorDisplayField>
        <errorMessage>Start Date cannot be greater than or equal to the End Date.</errorMessage>
    </validationRules>
</CustomObject>